# Polymarkets-algo

./: .env.example  start.sh
.claude/: launch.json
backend/: main.py  pyproject.toml  trading.db
backend/api/: __init__.py  server.py  ws_manager.py
backend/config/: settings.py
backend/core/data/: __init__.py  crypto_price_feed.py  normalization.py  rest_poller.py  ws_feed.py
backend/core/execution/: __init__.py  dead_man_switch.py  order_lifecycle.py  rate_limit_budget.py
backend/core/graph/: __init__.py  builder.py  nodes.py  state.py
backend/core/monitoring/: __init__.py  pnl_engine.py
backend/core/risk/: __init__.py  capital_sizer.py  kill_switch.py  position_ledger.py
backend/core/signal/: __init__.py  calibration_tracker.py  fair_value_engine.py  oracle_lag_monitor.py  source_verifier.py  velocity_momentum.py
backend/core/simulation/: __init__.py  latency_injector.py  matching_simulator.py  slippage_model.py
backend/db/: models.py
frontend/: dev-wrapper.sh  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/journal/: page.tsx
frontend/app/markets/: page.tsx
frontend/app/markets/[token_id]/: page.tsx
frontend/app/positions/: page.tsx
frontend/app/strategy/: page.tsx
frontend/components/layout/: ClientLayout.tsx  CommandFooter.tsx  Sidebar.tsx  TopBar.tsx
frontend/components/shared/: Badge.tsx  Panel.tsx  ResolutionCountdown.tsx  StatCard.tsx  StatusDot.tsx
frontend/hooks/: useWebSocket.ts
frontend/lib/: api.ts  store.ts  types.ts
